# 2026_UCD_final

./: .gitignore  CLAUDE.md  debug_attn.py  debug_set_attn.py  main.py  pipeline_custom.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: experiment_01.yaml  phase1_global.yaml  phase2_local.yaml
experiments/2026-05-19_first_run_seed42/: metrics.json
experiments/2026-05-20_4090_fixed/: metrics.json
experiments/2026-05-20_final5_img4/: metrics.json
experiments/2026-05-20_final5_img41/: metrics.json
experiments/2026-05-20_final5_simple/: config.yaml  metrics.json
experiments/2026-05-20_final_img4/: metrics.json
experiments/2026-05-20_final_simple/: metrics.json
experiments/2026-05-20_img4/: metrics.json
experiments/2026-05-20_img41/: metrics.json
experiments/2026-05-20_img41_512/: metrics.json
experiments/2026-05-20_img41_fft005/: config.yaml  metrics.json
experiments/2026-05-20_img41_fixed/: metrics.json
experiments/2026-05-20_img41_lab010/: metrics.json
experiments/2026-05-20_img41_lab_blend/: metrics.json
experiments/2026-05-20_img41_navy/: config.yaml  metrics.json
experiments/2026-05-20_img41_nofft_tauA08/: config.yaml  metrics.json
experiments/2026-05-20_img41_sdedit08/: config.yaml  metrics.json
experiments/2026-05-20_img4_512/: metrics.json
experiments/2026-05-20_img4_fixed/: metrics.json
experiments/2026-05-20_simple/: metrics.json
models/: __init__.py  attention_control.py
scripts/: inversion_test.py
tests/unit/: test_controlnet_runner.py  (+12 more)
utils/: __init__.py  frequency_filter.py  metrics.py
(+40 files in other folders)
