[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attn-texture"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "diffusers==0.38.0",
    "transformers",
    "Pillow",
    "opencv-python",
    "scikit-image",
    "lpips",
    "torchmetrics",
    "omegaconf",
    "loguru",
    "controlnet-aux",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
